# fork-tetra3

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  draft-release.yml  publish.yaml
docs/: conf.py  development.rst  index.rst  installation.rst
scripts/: validate-release-version.py  validate-version.py
tests/: conftest.py  test_generate_database.py  test_solve_from_image.py
tetra3/: __main__.py  tetra3.py
